--- a/demo/tree.table.html
+++ b/demo/tree.table.html
@@ -21,7 +21,7 @@
     </thead>
 </table>
 </body>
-<script src="../js/verTree.js" ></script>
+<script src="../verTree/verTree.js" ></script>
 <script src="data.js"></script>
 <script>
     new verTree({
