--- a/demo/tree.form.html
+++ b/demo/tree.form.html
@@ -16,7 +16,7 @@
     <div id="tree_list"></div>
 </form>
 </body>
-<script src="../js/verTree.js" ></script>
+<script src="../verTree/verTree.js" ></script>
 <script src="data.js"></script>
 <script>
     new verTree({
