更新form展示方式

--- a/demo/tree.data.html
+++ b/demo/tree.data.html
@@ -23,7 +23,7 @@
         items:"#tree_list",
         type:"data",//list:表格展示 data:一般展示 form：表单展示
         data:data,
-        parent:"pid",
+        parent:"parentId",
         params:"id",
         value:"name"
     });
