--- a/demo/tree.table.html
+++ b/demo/tree.table.html
@@ -16,7 +16,11 @@
     <thead>
     <tr data-tree-list="true" data-tree-changes="true">
         <th data-field="name">名称</th>
-        <th data-field="jingle">别名</th>
+        <th data-field="pinying">英文</th>
+        <th data-field="citycode">区号</th>
+        <th data-field="zipcode">行政编码</th>
+        <th data-field="lng">经度</th>
+        <th data-field="lat">纬度</th>
     </tr>
     </thead>
 </table>
@@ -28,7 +32,7 @@
         items:"#tree_list",
         type:"list",//list:表格展示 data:一般展示 form：表单展示
         data:data,
-        parent:"pid",
+        parent:"parentId",
         params:"id"
     });
 </script>
