样式更新，数据加载方式更新

--- a/demo/tree.data.html
+++ b/demo/tree.data.html
@@ -25,7 +25,8 @@
         data:data,
         parent:"parentId",
         params:"id",
-        value:"name"
+        value:"name",
+        open_close: "open"
     });
 </script>
 </html>
