--- a/demo/tree.form.html
+++ b/demo/tree.form.html
@@ -25,7 +25,9 @@
         data:data,
         parent:"parentId",
         params:"id",
-        value:"name"
+        value:"name",
+        name: "id",
+        defaults:["110000"]
     });
 </script>
 </html>
