--- a/demo/tree.table.html
+++ b/demo/tree.table.html
@@ -15,8 +15,8 @@
 <table id="tree_list">
     <thead>
     <tr data-tree-list="true" data-tree-changes="true">
-        <th data-field="name">名称</th>
-        <th data-field="pinying">英文</th>
+        <th data-field="name" >名称</th>
+        <th data-field="pinying" data-style="text-align:center">英文</th>
         <th data-field="citycode">区号</th>
         <th data-field="zipcode">行政编码</th>
         <th data-field="lng">经度</th>
